5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1649_1053.log
== TEST (2019-04-09 19:09:43) 
-- CODE:
nome_do_patrono=input("É CERVO OU NÃO CERVO:")

if(nome_do_patrono=CERVO):
	mensagem="cervo eh patrono do Harry Potter."
else:
	mensagem="nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 3
    if(nome_do_patrono=CERVO):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:11:11) 
-- CODE:
nome_do_patrono=input("é cervo ou não é cervo:")

if(nome_do_patrono=cervo):
	mensagem="cervo eh patrono do Harry Potter."
else:
	mensagem="nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 3
    if(nome_do_patrono=cervo):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:21:05) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono=cervo):
	mensagem="cervo eh patrono do Harry Potter."
else:
	mensagem="nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 3
    if(nome_do_patrono=cervo):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:24:03) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono==cervo):
	mensagem="cervo eh patrono do Harry Potter."
	print(nome_do_patrono,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
print(nome_do_patrono,mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(nome_do_patrono==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:24:07) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono==cervo):
	mensagem="cervo eh patrono do Harry Potter."
	print(nome_do_patrono,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
print(nome_do_patrono,mensagem)
-- EXECUTION TIME:
0.22294
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 3, in <module>
    if(nome_do_patrono==cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:24:09) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono==cervo):
	mensagem="cervo eh patrono do Harry Potter."
	print(nome_do_patrono,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
print(nome_do_patrono,mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(nome_do_patrono==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:24:58) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter."
	print(nome_do_patrono,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
print(nome_do_patrono,mensagem)
-- EXECUTION TIME:
0.20194
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter.
cervo cervo eh patrono do Harry Potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:25:49) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter."
print(nome_do_patrono,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
print(nome_do_patrono,mensagem)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:26:39) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter."

	print(nome_do_patrono,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"

	print(nome_do_patrono,mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:26:43) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter."

	print(nome_do_patrono,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"

	print(nome_do_patrono,mensagem)
-- EXECUTION TIME:
0.134927
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:28:05) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter."
   print(nome_do_patrono,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
   print(nome_do_patrono,mensagem)
-- EXECUTION TIME:
0.151049
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 5
    print(nome_do_patrono,mensagem)
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:29:11) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter"
   print(nome_do_patrono,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
   print(nome_do_patrono,mensagem)
-- EXECUTION TIME:
0.134175
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 5
    print(nome_do_patrono,mensagem)
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:30:35) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter"
   print(nome_do_patrono,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
   print(nome_do_patrono,mensagem)
-- ERROR:
File "XXXX", line 5
    print(nome_do_patrono,mensagem)
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:31:59) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter"
	print(nome_do_patrono,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
   print(nome_do_patrono,mensagem)
-- EXECUTION TIME:
0.182195
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 8
    print(nome_do_patrono,mensagem)
                                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:32:02) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter"
	print(nome_do_patrono,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
   print(nome_do_patrono,mensagem)
-- ERROR:
File "XXXX", line 8
    print(nome_do_patrono,mensagem)
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:32:27) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter"
	print(nome_do_patrono,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
	print(nome_do_patrono,mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:32:34) 
-- CODE:
nome_do_patrono=input("Qual o nome do Patrono:")

if(nome_do_patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter"
	print(nome_do_patrono,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
	print(nome_do_patrono,mensagem)
-- EXECUTION TIME:
0.146198
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:33:24) 
-- CODE:
nome=input("Qual o nome do Patrono:")

if(nome=="cervo"):
	mensagem="eh patrono do Harry Potter"
	print(nome,mensagem)
else:
	mensagem="nao eh patrono do Harry Potter"
	print(nome,mensagem)
-- EXECUTION TIME:
0.188253
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
